--- a/.github/workflows/new.yaml
+++ b/.github/workflows/new.yaml
@@ -7,6 +7,17 @@ on:
     branches: ["main"]
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/PigSpeech:latest .
+      - name: Push the Docker image
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/PigSpeech:latest
   deploy:
     runs-on: ubuntu-latest
     steps:
