update CICD again

--- a/.github/workflows/new.yaml
+++ b/.github/workflows/new.yaml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Work Completed Notification
         run: |
-          curl --location ${{ secrets.DISCORD_WEBHOOK }} \
+          curl --location "${{ secrets.DISCORD_WEBHOOK }}" \
             --header 'Content-Type: application/json' \
             --data '{
               "username": "Pig Speech",
@@ -66,7 +66,7 @@ jobs:
                     }
                   ],
                   "footer": {
-                    "text": "Build completed on '${{ env.BUILD_TIMESTAMP }}'",
+                    "text": "Build completed on ${env.BUILD_TIMESTAMP}",
                     "icon_url": "https://cdn-icons-png.flaticon.com/512/833/833281.png"
                   }
                 }
